prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/syntax_errors/expected_identifier.nut
// EXPECT_ERROR: "expected 'IDENTIFIER'"
function 123() {
    return 42
}
